--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,17 +8,27 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.1/css/bootstrap.min.css" integrity="sha512-siwe/oXMhSjGCwLn+scraPOWrJxHlUgMBMZXdPe2Tnk3I0x3ESCoLz7WZ5NTH6SZrywMY+PB1cjyqJ5jAluCOg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="position-relative" style="min-height: 100vh;">
-    <nav class="navbar navbar-expand-lg bg-dark">
-        <div class="container-fluid">
-            <a href="#" class="navbar-brand text-bg-dark">Template App</a>
+  <nav class="navbar navbar-expand-lg bg-dark">
+    <div class="container-fluid">
+      <a href="#" class="navbar-brand text-bg-dark">Template App</a>
 
-            <% if(user){ %>
-                <form action="/logout" method="POST">
-                    <button class="btn btn-primary" type="submit">Logout</button>
-                </form>
-           <% } %>
-            
+      <% if(user && user.avatar){ %>
+        <div class="flex-row my-3 my-md-0">
+          <img id="previewAvatar" class="avatar-tiny" style="width: 32px; height: 32px; border-radius: 16px;" src="data:<%= contentType %>;base64, <%= image %>" alt="avatar preview">
+          <form action="/logout" method="POST" class="d-inline">
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+            <button class="btn btn-primary" type="submit">Logout</button>
+          </form>
         </div>
-    </nav>
+      <% }else if(user){ %>
+        <div class="flex-row my-3 my-md-0">
+          <img id="previewAvatar" class="avatar-tiny" style="width: 32px; height: 32px; border-radius: 16px;" src="../../images/Sunflower.jpeg" alt="avatar preview">
+          <form action="/logout" method="POST" class="d-inline">
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+            <button class="btn btn-primary" type="submit">Logout</button>
+          </form>
+        </div>
+     <% } %>
+  </nav>
     
 
